# modern-ai-kernels

./: .clang-format  .clang-tidy  .clangd  .cursorrules  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  HANDOVER.md  LICENSE  Makefile  PRODUCT.md  QWEN.md  README.md  README.zh-CN.md  SECURITY.md  _config.yml  index.md  pyproject.toml
.claude/commands/opsx/: apply.md  archive.md  explore.md  propose.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  pages.yml  release.yml
.kiro/specs/project-polish/: design.md  requirements.md  tasks.md
.kiro/specs/tensorcraft-hpc/: design.md  requirements.md  tasks.md
.omc/: project-memory.json
.omc/sessions/: 35b74f03-28b2-4df0-b683-a4e2f54fea36.json
.omc/state/: agent-replay-c53ec7a0-cf07-4720-a34e-cf913791c998.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
_includes/: head_custom.html
benchmarks/: CMakeLists.txt  attention_benchmark.cpp  conv_benchmark.cpp  gemm_benchmark.cpp
changelog/: 2025-02-13_project-infrastructure.md  2026-01-08.md  2026-03-09_major-refactoring.md  2026-03-10_pages-optimization.md  2026-03-13_docs-information-architecture-standardization.md  2026-03-13_workflow-cpu-safe-ci.md  2026-04-16_docs-restructure-v3-0-0.md  README.md
docs/: .gitignore  404.html  Gemfile  INSTALL.md  README.md  TROUBLESHOOTING.md  _config.yml  api_reference.md  architecture.md  index.html  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  style.css
docs/_includes/: head_custom.html  nav_footer_custom.html
docs/_layouts/: docs.html  landing.html
docs/_sass/color_schemes/: tensorcraft.scss
docs/api/: README.md
docs/assets/css/: custom.scss  docs.scss  landing.scss
docs/assets/js/: docs.js  landing.js
docs/en/: README.md  architecture.md  changelog.md  faq.md  getting-started.md  index.md
docs/en/academy/: index.md
docs/en/api/: README.md  attention.md  convolution.md  core.md  gemm.md  kernels.md  memory.md  normalization.md  python.md  quantization.md  sparse.md
docs/en/benchmarks/: attention.md  gemm.md  index.md
docs/en/evidence/: index.md
docs/en/examples/: README.md  attention.md  basic-gemm.md  flash-attention.md  gemm-tutorial.md  index.md  normalization.md  python-bindings.md  python-usage.md
docs/en/getting-started/: README.md  TROUBLESHOOTING.md  installation.md  troubleshooting.md
docs/en/guides/: README.md  architecture.md  benchmarking.md  installation.md  modern-cpp-cuda.md  optimization.md  quick-start.md
docs/en/reference/: README.md  changelog.md  code-of-conduct.md  contributing.md  security.md
docs/en/references/: papers.md  resources.md
docs/en/whitepaper/: architecture.md  index.md  methodology.md  performance.md
docs/examples/: README.md  attention.md
docs/getting-started/: README.md  installation.md
docs/guides/: architecture.md  modern-cpp-cuda.md  optimization.md
docs/reference/: README.md  changelog.md  contributing.md
docs/scripts/: sync-changelog.mjs
docs/tests/: pages-redesign.test.mjs
docs/zh/: README.md  architecture.md  changelog.md  faq.md  getting-started.md  index.md
docs/zh/academy/: index.md
docs/zh/api/: README.md  attention.md  convolution.md  core.md  gemm.md  kernels.md  memory.md  normalization.md  python.md  quantization.md  sparse.md
docs/zh/benchmarks/: attention.md  gemm.md  index.md
docs/zh/evidence/: index.md
docs/zh/examples/: README.md  attention.md  basic-gemm.md  flash-attention.md  gemm-tutorial.md  index.md  normalization.md  python-bindings.md  python-usage.md
docs/zh/getting-started/: README.md  installation.md  troubleshooting.md
docs/zh/guides/: README.md  architecture.md  benchmarking.md  installation.md  modern-cpp-cuda.md  optimization.md  quick-start.md
docs/zh/reference/: README.md  changelog.md  code-of-conduct.md  contributing.md  security.md
docs/zh/references/: papers.md  resources.md
docs/zh/whitepaper/: architecture.md  index.md  methodology.md  performance.md
examples/: CMakeLists.txt  attention_example.cu  basic_gemm.cu
include/tensorcraft/core/: cuda_check.hpp  features.hpp  type_traits.hpp  warp_utils.hpp  warp_utils_host.hpp
include/tensorcraft/kernels/: all.hpp  attention.hpp  conv2d.hpp  elementwise.hpp  fusion.hpp  gemm.hpp  memory_ops.hpp  normalization.hpp  op_registry.hpp  softmax.hpp  sparse.hpp
include/tensorcraft/memory/: aligned_vector.hpp  allocator.hpp  memory_pool.hpp  tensor.hpp
legacy-specs/: README.md
legacy-specs/db/: data-structures.md
legacy-specs/product/: project-polish.md  tensorcraft-hpc.md
legacy-specs/rfc/: 0001-core-architecture.md  0002-project-polish.md
legacy-specs/testing/: project-polish-impl.md  tensorcraft-hpc-impl.md
openspec/: README.md  config.yaml
openspec/archive/000-initial-state/: proposal.md  tasks.md
openspec/archive/001-closeout-stabilization/: tasks.md
openspec/changes/closeout-stabilization/: design.md  proposal.md  tasks.md
openspec/changes/elevate-project-showcase/: design.md  proposal.md  tasks.md
openspec/changes/tighten-kernel-interfaces/: proposal.md  tasks.md
openspec/specs/api/: spec.md
openspec/specs/architecture/: spec.md
openspec/specs/core/: spec.md
openspec/specs/polish/: spec.md
openspec/templates/: design.md  proposal.md  tasks.md
specs/api/: cxx-api.md
specs/rfc/: 0001-core-architecture.md
src/python_ops/: CMakeLists.txt  bindings.cpp  cuda_ops.cu  cuda_ops.hpp
tests/: CMakeLists.txt  cuda_test_ops.cu  cuda_test_ops.hpp  test_attention.cpp  test_attention_docs_contract.cpp  test_conv2d.cpp  test_elementwise.cpp  test_fusion.cpp  test_gemm.cpp  test_main.cpp  test_normalization.cpp  test_python_bindings.py  test_softmax.cpp  test_sparse.cpp  test_utils.hpp  test_warp_utils.cpp
tests/reference/: reference_ops.hpp
(+21 files in other folders)
